--- a/src/components/expandable-items/checkbox-list/checkbox-list.scss
+++ b/src/components/expandable-items/checkbox-list/checkbox-list.scss
@@ -1,11 +1,11 @@
 .checkbox-list {
-  &__title-button {
+  &__title {
     position: relative;
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
 
-    &_hidden-input {
+    &_button {
       position: absolute;
       left: -10px;
       bottom: -4px;
@@ -30,12 +30,9 @@
     }
   }
 
-  &__checkboxes-array {
-    margin-top: 18px;
-  }
-
-  &_inserted {
+  &__items {
     display: none;
+    margin-top: 18px;
   }
 }
 
