--- a/src/components/expandable-items/dropdown/dropdown.pug
+++ b/src/components/expandable-items/dropdown/dropdown.pug
@@ -1,5 +1,7 @@
 mixin dropdown( item )
-  .dropdown.elem__border
+  - const dropdownEjectedClass = item.ejected ? 'dropdown_ejected' : 'dropdiwn_injected'
+
+  .dropdown.expander__aim( class=dropdownEjectedClass )
     each option in item.options
       .dropdown__option
         span.dropdown__option_name #{option}
