--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -26,7 +26,7 @@
     }
 
     &:hover,
-    &:focus,
+    &:focus-within,
     &:disabled {
       &::placeholder {
         color: rgba($valhalla, .75);
