--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -243,7 +243,7 @@ body.ui-kit__body
           +checkboxList({
             title: "expandable checkbox list",
             groupname: "uik-fe__checkbox-list_default",
-            inserted: true,
+            expanded: false,
             disabled: true,
             checkboxes: [
               { pressed: false, label: "Завтрак" },
@@ -258,7 +258,7 @@ body.ui-kit__body
           +checkboxList({
             title: "expandable checkbox list",
             groupname: "uik-fe__checkbox-list_ejected",
-            inserted: false,
+            expanded: true,
             checkboxes: [
               { pressed: false, label: "Завтрак" },
               { pressed: true,  label: "Письменный стол" },
