--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -21,7 +21,7 @@ body.ui-kit__body
   main.ui-kit__main
     .form-elements__wrap.wrap_top
       .form-elements__column.column_left
-        .form-elements__block.block__inpuns_common
+        .form-elements__block.block__inputs_common
           +inputs([
             {
               title: "text field",
@@ -38,7 +38,6 @@ body.ui-kit__body
               title: "dropdown",
               placeholder: "Сколько гостей",
               dropdown: {
-                expanded: true,
                 options: [
                   "взрослые",
                   "дети",
