--- a/src/components/expandable-items/dropdown/dropdown.scss
+++ b/src/components/expandable-items/dropdown/dropdown.scss
@@ -2,14 +2,15 @@
 
 .dropdown {
   position: absolute;
-  border-color: rgba($valhalla, .5);
-  border-radius: 0px 0px 4px 4px;
+  display: none;
+  top: 43px;
   padding: 7px 7px 7px 15px;
   width: inherit;
-  box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
-  background-color: #fff;
   z-index: 10;
-  display: none;
+  background-color: #fff;
+  box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
+  border-color: rgba($valhalla, .5);
+  border-radius: 0px 0px 4px 4px;
 
   &__option {
     display: flex;
