--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -197,6 +197,7 @@ body.ui-kit__body
               state: "expanded",
               placeholder: "2 спальни, 2 кровати...",
               widthbypercent: 75,
+              expanded: true,
               dropdown: {
                 options: [
                   "спальни",
@@ -212,6 +213,7 @@ body.ui-kit__body
             {
               title: "dropdown",
               placeholder: "Сколько гостей",
+              expanded: true,
               dropdown: {
                 options: [
                   "взрослые",
@@ -227,6 +229,7 @@ body.ui-kit__body
             {
               title: "dropdown",
               placeholder: "3 гостя",
+              expanded: true,
               dropdown: {
                 options: [
                   "взрослые",
