--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -10,18 +10,19 @@ mixin inputs( items=[] )
     - const expanderParentClass = item.dropdown ? 'expander__parent' : ''
     - const widthClass = `elem__width_${widthByPercent}`
     - const iconFlippedClass = item.expanded ? 'icon_flipped' : ''
+    - const checked = item.expanded ? true : false
 
     .input( class=[widthClass, expanderParentClass] )
       if item.title
         .input__title
           +titleBar( item.title, item.state )
       .input__element
-        input.input__frame( class=expanderClass readonly=readonlyState type=item.type placeholder=item.placeholder disabled=item.disabled ) 
+        input.input__frame( class=expanderClass readonly=readonlyState type=item.type placeholder=item.placeholder disabled=item.disabled checked=item.expanded ) 
 
         if item.dropdown
           .input__icon_dropdown
             +materialIcon('expand_more')
-          +dropdown( item.dropdown )
+          +dropdown( item.dropdown, item.expanded )
 
         if item.subscription
           .input__icon_subscription( class=iconFlippedClass )
