--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -35,6 +35,7 @@ body.ui-kit__body
               disabled: true
             },
             {
+              id: "dropdown__common_01",
               title: "dropdown",
               placeholder: "Сколько гостей",
               dropdown: {
@@ -54,6 +55,7 @@ body.ui-kit__body
           .form-elements__element.twinline-gap_longest
             +inputs([
               {
+                id: "dropdown__date-twins_01",
                 title: "date dropdown",
                 placeholder: "ДД.ММ.ГГГГ",
                 widthbypercent: 50,
@@ -64,6 +66,7 @@ body.ui-kit__body
                 }
               },
               {
+                id: "dropdown__date-twins_02",
                 title: "date dropdown",
                 placeholder: "19.08.2019",
                 widthbypercent: 50,
@@ -77,6 +80,7 @@ body.ui-kit__body
         .form-elements__block.block__dropdowns_date-semi-wide
           +inputs([
             {
+              id: "dropdown__date-semi-wide_01",
               title: "filter date dropdown",
               placeholder: "19 авг - 23 авг",
               widthbypercent: 75,
@@ -179,9 +183,10 @@ body.ui-kit__body
               +paginationElem()
     .form-elements__wrap.wrap_upper-middle
       .form-elements__column.column_left
-        .form-elements__block.block__dropdowns_in-action
+        .form-elements__block.block__dropdowns_action
           +inputs([
             {
+              id: "input__action_01",
               title: "dropdown",
               state: "default",
               placeholder: "2 спальни, 2 кровати...",
@@ -193,6 +198,7 @@ body.ui-kit__body
               }
             },
             {
+              id: "input__action_01",
               title: "dropdown",
               state: "expanded",
               placeholder: "2 спальни, 2 кровати...",
