--- a/src/components/type-sample/type-sample.scss
+++ b/src/components/type-sample/type-sample.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-row: 7;
   grid-gap: 51px;
-  width: 496px;
+  width: 436px;
   height: 321px;
 }
 
@@ -26,8 +26,34 @@
     margin: 0 0 0 30px;
     width: 369px;
   }
+}
 
-  p.type-item__note {
-    opacity: 0.75;
+.font-size {
+  &_h1,
+  &_h2,
+  &_h3 {
+    & > .type-item__note {
+      font-weight: bold;
+    }
+  }
+
+  &_h1 {
+    font-size: 24px;
+  }
+
+  &_h2 {
+    font-size: 19px;
+  }
+
+  &_h3 {
+    font-size: 12px;
+  }
+
+  &_body {
+    font-size: 14px;
+    
+    & > .type-item__note {
+      opacity: 0.75;
+    }
   }
 }
