Global files renaming

--- a/src/components/button/__like/button__like.scss
+++ b/src/components/button/__like/button__like.scss
@@ -1,5 +1,5 @@
 @import "@variables";
-@import "../buttons.scss";
+@import "../button.scss";
 @import "../../../styles/gradient-fill-entities.scss";
 
 .like-button {
