--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,4 +1,4 @@
-include ../navigation-links/navigation-links.pug
+include ../navigation-bar/navigation-bar.pug
 include ../input/input.pug
 include ../logo/logo.pug
 include ../title-bar/title-bar.pug
@@ -15,7 +15,7 @@ mixin footer( item )
               .footer__awards-text
                 span.footer__common-text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
             .footer__content
-              +navigationLinks({
+              +navigationBar({
                 vertical: true,
                 title: "навигация",
                 links: [
@@ -26,7 +26,7 @@ mixin footer( item )
                 ]
               })
             .footer__content
-              +navigationLinks({
+              +navigationBar({
                 vertical: true,
                 title: "О нас",
                 links: [
@@ -37,7 +37,7 @@ mixin footer( item )
                 ]
               })
             .footer__content
-              +navigationLinks({
+              +navigationBar({
                 vertical: true,
                 title: "Служба поддержки",
                 links: [
