Global pages restructurization

--- a/src/pages/ui-kit/colors-n-type/colors-n-type.pug
+++ b/src/pages/ui-kit/colors-n-type/colors-n-type.pug
@@ -1,6 +1,6 @@
-include ../components/header/__ui-kit/header__ui-kit.pug
-include ../components/color-sample/color-sample.pug
-include ../components/type-sample/type-sample.pug
+include ../../../components/header/__ui-kit/header__ui-kit.pug
+include ../../../components/color-sample/color-sample.pug
+include ../../../components/type-sample/type-sample.pug
 
 body.ui-kit__body
   header.ui-kit__header
