--- a/src/pages/ui-kit/headers-n-footers/headers-n-footers.pug
+++ b/src/pages/ui-kit/headers-n-footers/headers-n-footers.pug
@@ -1,6 +1,6 @@
-include ../components/header/__ui-kit/header__ui-kit.pug
-include ../components/header/__landing/header__landing.pug
-include ../components/footer/footer.pug
+include ../../../components/header/__ui-kit/header__ui-kit.pug
+include ../../../components/header/__landing/header__landing.pug
+include ../../../components/footer/footer.pug
 
 body.ui-kit__body.bgcolor_whisper
   header.ui-kit__header
