--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -3,10 +3,10 @@ mixin logotype( type )
     when 'monochrome'
       form.logotype.logotype_monochrome( action="index.html" )
         input.logotype__button( type="submit" )
-        img.logotype__image( src=require("../assets/images/vector/logo-monochrome-s48.svg") )
+        img.logotype__image( src=require("@images/vector/logo-monochrome-s48.svg") )
     when 'colorful'
       form.logotype.logotype_colorful( action="" )
         input.logotype__button( type="submit" )
-        img.logotype__image( src=require("../assets/images/vector/logo-colorful-s40.svg") )
-        img.logotype__image( src=require("../assets/images/vector/logo-text-part.svg") )
+        img.logotype__image( src=require("@images/vector/logo-colorful-s40.svg") )
+        img.logotype__image( src=require("@images/vector/logo-text-part.svg") )
         
