--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,4 +1,4 @@
-include ../components/header/__ui-kit/header__ui-kit.pug
+include ../../components/header/__ui-kit/header__ui-kit.pug
 
 body.ui-kit__body
   header.ui-kit__header
