--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -1,19 +1,19 @@
-include ../components/header/__ui-kit/header__ui-kit.pug
-include ../components/input/input.pug
-include ../components/advantage-bar/advantage-bar.pug
-include ../components/title-bar/title-bar.pug
-include ../components/range-slider/range-slider.pug
-include ../components/pagination/pagination.pug
-include ../components/bullet-list/bullet-list.pug
-include ../components/comment-bar/comment-bar.pug
-include ../components/expandable/__checkbox-list/expandable__checkbox-list.pug
+include ../../../components/header/__ui-kit/header__ui-kit.pug
+include ../../../components/input/input.pug
+include ../../../components/advantage-bar/advantage-bar.pug
+include ../../../components/title-bar/title-bar.pug
+include ../../../components/range-slider/range-slider.pug
+include ../../../components/pagination/pagination.pug
+include ../../../components/bullet-list/bullet-list.pug
+include ../../../components/comment-bar/comment-bar.pug
+include ../../../components/expandable/__checkbox-list/expandable__checkbox-list.pug
 
-include ../components/button/__toggle/button__toggle.pug
-include ../components/button/__like/button__like.pug
-include ../components/button/__radio/button__radio.pug
-include ../components/button/__rate-stars/button__rate-stars.pug
-include ../components/button/__checkbox/button__checkbox.pug
-include ../components/button/__mean-oval/button__mean-oval.pug
+include ../../../components/button/__toggle/button__toggle.pug
+include ../../../components/button/__like/button__like.pug
+include ../../../components/button/__radio/button__radio.pug
+include ../../../components/button/__rate-stars/button__rate-stars.pug
+include ../../../components/button/__checkbox/button__checkbox.pug
+include ../../../components/button/__mean-oval/button__mean-oval.pug
 
 body.ui-kit__body
   header.ui-kit__header
