--- a/src/components/header/__landing/header__landing.pug
+++ b/src/components/header/__landing/header__landing.pug
@@ -11,11 +11,11 @@ mixin headerLanding( item )
       .header-landing__nav
         +navigationBar({
           links: [
-            { href: "", name: "О нас", bold: true },
-            { href: "", name: "Услуги", icon: true },
-            { href: "", name: "Вакансии" },
-            { href: "", name: "Новости" },
-            { href: "", name: "Соглашения", icon: true },
+            { name: "О нас",      href: "", bold: true },
+            { name: "Услуги",     href: "", icon: true },
+            { name: "Вакансии",   href: "", },
+            { name: "Новости",    href: "", },
+            { name: "Соглашения", href: "", icon: true },
           ]
         })
       case item.authorized
