--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -10,7 +10,7 @@ body.ui-kit__body
         vertical: true,
         title: "ui kit pages",
         links: [
-          { name: "cards",             href: "ui-kit__cards.html" },
+          { name: "cards",             href: "ui-kit__cardXXXXs.html" },
           { name: "colors & type",     href: "ui-kit__colors-n-type.html" },
           { name: "form elements",     href: "ui-kit__form-elements.html" },
           { name: "headers & footers", href: "ui-kit__headers-n-footers.html" }
