Fixed nav-bar required attributes according to new 404 page

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -19,10 +19,10 @@ mixin footer( item )
                 vertical: true,
                 title: "навигация",
                 links: [
-                  { href: "", name: "О нас" },
-                  { href: "", name: "Новости" },
-                  { href: "", name: "Служба поддержки" },
-                  { href: "", name: "Услуги" }
+                  { name: "О нас" },
+                  { name: "Новости" },
+                  { name: "Служба поддержки" },
+                  { name: "Услуги" }
                 ]
               })
             .footer__content
@@ -30,10 +30,10 @@ mixin footer( item )
                 vertical: true,
                 title: "О нас",
                 links: [
-                  { href: "", name: "О сервисе" },
-                  { href: "", name: "Наша команда" },
-                  { href: "", name: "Вакансии" },
-                  { href: "", name: "Инвесторы" }
+                  { name: "О сервисе" },
+                  { name: "Наша команда" },
+                  { name: "Вакансии" },
+                  { name: "Инвесторы" }
                 ]
               })
             .footer__content
@@ -41,9 +41,9 @@ mixin footer( item )
                 vertical: true,
                 title: "Служба поддержки",
                 links: [
-                  { href: "", name: "Соглашения" },
-                  { href: "", name: "Сообщества" },
-                  { href: "", name: "Связь с нами" }
+                  { name: "Соглашения" },
+                  { name: "Сообщества" },
+                  { name: "Связь с нами" }
                 ]
               })
             .footer__content_start-end
