--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -217,6 +217,7 @@ body.ui-kit__body
         .form-elements__block.block__dropdowns_no-guests
           +inputs([
             {
+              id: "dropdown_no-guests_01",
               title: "dropdown",
               placeholder: "Сколько гостей",
               expanded: true,
@@ -233,6 +234,7 @@ body.ui-kit__body
         .form-elements__block.block__dropdowns_guests
           +inputs([
             {
+              id: "dropdown_guests_01",
               title: "dropdown",
               placeholder: "3 гостя",
               expanded: true,
