--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -1,8 +1,8 @@
-include ../../../components/header/__ui-kit/header__ui-kit.pug
+include ../../../components/logo/logo.pug
 
 body.ui-kit__body
   header.ui-kit__header
-    +headerUI()
+    +logo({ type: "monochrome" })
   main.ui-kit__main
     .headers-n-footers
 
