--- a/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
+++ b/src/pages/ui-kit/__headers-n-footers/ui-kit__headers-n-footers.pug
@@ -1,14 +1,14 @@
-include ../../../components/header/__ui-kit/header__ui-kit.pug
-include ../../../components/header/__landing/header__landing.pug
+include ../../../components/logo/logo.pug
+include ../../../components/header/header.pug
 include ../../../components/footer/footer.pug
 
 body.ui-kit__body.bgcolor_whisper
   header.ui-kit__header
-    +headerUI()
+    +logo({ type: "monochrome" })
   main
     .headers-n-footers
-      +headerLanding({ authorized: false })
-      +headerLanding({ authorized: true })
+      +header({ authorized: false })
+      +header({ authorized: true })
       +footer({ type: 'default' })
       +footer({ type: 'mobile' })
   footer.ui-kit__footer
