--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -8,6 +8,11 @@
     user-select: none;
   }
 
+  &__header {
+    height: 140px;
+    width: 100%;
+  }
+
   &__main {
     display: grid;
     padding: 0px 158px 0px 150px; 
