--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,12 +1,12 @@
-mixin logotype( type )
-  case type 
+mixin logo( item )
+  case item.type
     when 'monochrome'
       form.logotype.logotype_monochrome( action="index.html" )
-        input.logotype__button( type="submit" )
+        input.logotype__button( type="submit" disabled=item.disabled )
         img.logotype__image( src=require("@images/vector/logo-monochrome-s48.svg") )
     when 'colorful'
-      form.logotype.logotype_colorful( action="" )
-        input.logotype__button( type="submit" )
+      form.logotype.logotype_colorful( action="404.html" )
+        input.logotype__button( type="submit" disabled=item.disabled )
         img.logotype__image( src=require("@images/vector/logo-colorful-s40.svg") )
         img.logotype__image( src=require("@images/vector/logo-text-part.svg") )
         
