--- a/src/components/advantage-bar/advantage-bar.pug
+++ b/src/components/advantage-bar/advantage-bar.pug
@@ -2,12 +2,11 @@ include ../material-icon-cell/material-icon-cell.pug
 
 mixin advantageBars( items=[] )
   each item in items
-    .advantages-block
-      .advantages-block__text-bar
-        .advantages-block__icon
+    .advantages-bar
+      .advantages-bar__content
+        .advantages-bar__icon
           +materialIcon( item.iconname )
-        .advantages-block__text
-          span.advantages-block__text__title #{item.title}
-          span.advantages-block__text__brief #{item.brief}
-      .advantages-block__line-bar
-        hr.advantages-block__line-bar__elem( noshade=true size='1px' width='280px' )
+        .advantages-bar__text
+          span.advantages-bar__title #{item.title}
+          span.advantages-bar__brief #{item.brief}
+      hr.advantages-bar__line( noshade=true size='1px' width='280px' )
